committing xalan-j xslt3.0 implementation improvements